feat: ultra potato sodium competitor + standalone 1.17 single-jar (hyper nova super pro max, 1.17→26.3 one JAR, potato 4-chunk/12-block cull, greedy meshing, allocation pooling)
Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>